fix: add release tag to build script
Signed-off-by: Andrew <mindovermiles262@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build Artifacts
-        run: build/artifacts.sh
+        env:
+          GH_TAG: ${{ github.ref_name }}
+        run: build/artifacts.sh $GH_TAG
   # release:
   #   name: Release
   #   runs-on: ubuntu-latest
